<resources>
    <string name="app_name">Telyu Creative</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_option">Don\'t have account?</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Create Account</string>
    <string name="login_option">Already have account?</string>
    <string name="tv_login">Login</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="register_option_click">Register Here</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="email_sent_success">Email sent successfully to reset your password!</string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="register_success">You are registered successfully.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="err_msg_enter_description">Please enter description.</string>
    <string name="err_msg_enter_profession">Please enter your profession.</string>
    <string name="err_msg_enter_link_insta">Please enter your Instagram username.</string>
    <string name="err_msg_enter_link_yt">Please enter your Youtube Link.</string>
    <string name="err_msg_enter_link_linkedin">Please enter your Linkedin Link.</string>

    <string name="err_msg_select_creation_image">Please select creation image.</string>
    <string name="err_msg_enter_creation_title">Please enter creation title.</string>
    <string name="err_msg_enter_creation_desc">Please enter creation description.</string>
    <string name="err_msg_enter_creation_category">Please enter creation category.</string>
    <string name="err_msg_enter_creatio_link">Please enter product link.</string>

    <string name="creation_uploaded_success_message">Your creation is uploaded successfully.</string>
    <string name="creation_add_favorite_success_message">successfully add this creation to favorite .</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="category">Category</string>
    <string name="search">search</string>
    <string name="chat">chat</string>
    <string name="profile">profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot\nPassword?</string>
    <string name="username">Username</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="sent_a_project">Sent a Project</string>
    <string name="upload_karya">Upload Karya</string>
    <string name="dashboard">Dashboard</string>
    <string name="general">General</string>
    <string name="setting">Setting</string>
    <string name="payment">Payment</string>
    <string name="support">Support</string>
    <string name="edit_profile">edit profile</string>
    <string name="lihat_karya">Lihat Karya</string>
    <string name="upload_your_art_here">Upload Your\nART Here</string>
    <string name="title">Title</string>
    <string name="enter_the_title">Enter the title Creation</string>
    <string name="description">Description</string>
    <string name="describe_your_art">Describe your art</string>
    <string name="upload_your_art">Upload Your ART</string>
    <string name="cancel">Cancel</string>
    <string name="url_link">URL Link</string>
    <string name="enter_your_creation_link">Enter your creation link</string>
    <string name="forgot_password_subtitle">Don’t worry ! it happens. Please enter the address associated with your account.</string>
    <string name="send">Send</string>
    <string name="creative">Creative</string>
    <string name="change_name">Change Name</string>
    <string name="describe_who_you_are">Describe who you are</string>
    <string name="your_name">Your Name</string>
    <string name="your_social_media">Your link social media</string>
    <string name="hint_link_instagram">Instagram</string>
    <string name="link_youtube">Youtube</string>
    <string name="linkedin">Linkedin</string>
    <string name="save">Save</string>
    <string name="profession">Profession</string>
    <string name="enter_your_profession">Enter your profession</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="nim">NIM</string>
    <string name="enter_your_nim">Enter your NIM</string>
    <string name="faculty">Faculty</string>
    <string name="enter_your_faculty">Enter your Faculty</string>
    <string name="study_program">Study Program</string>
    <string name="enter_your_study_program">Enter your Study Program</string>
    <string name="enter_your_category_creation">Enter your Category Creation</string>
    <string name="logo">logo</string>

    <string name="search_creation">Search Creation</string>
    <string name="temukan_karya_yang_luarbiasa_karya_anak_bangsa">Temukan <font color="#B6252A">Karya</font> \nYang Luarbiasa  <font color="#B6252A">Karya</font> Anak <font color="#B6252A">Bangsa</font> </string>
    <string name="ketuk_untuk_lanjut">Ketuk untuk lanjut</string>
    <string name="popular_search">Popular Search</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="other">Other</string>
    <string name="category_name">Category Name</string>
    <string name="image_popular">Image Popular</string>
    <string name="title_activity_creation_detail">CreationDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="belum_ada_karya_yang_kamu_pilih">Belum Ada Karya Yang Kamu Pilih</string>
    <string name="belum_ada_karya_yang_kamu_upload">Belum Ada Karya Yang Kamu Upload</string>
    <string name="subtext_empty_save">Belum ada karya yang kamu Masukan Kedalam Wishlist silahkan eksplore dan temukan karya anak bangsa yang menginspirasimu.</string>
    <string name="subtext_empty_dashboard">Maaf, Belum ada karya yang kamu Upload silahkan upload karyamu terlebih dahulu.</string>
    <string name="eksplore">Eksplore</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="message">%1$s diklik</string>
    <string name="creation_name">Creation Name</string>
    <string name="creation_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Iaculis at nisl senectus sed convallis enim enim, elementum ornare. Vel proin morbi sed etiam risus. Et ut ornare porta quisque mi lacus. Sagittis, faucibus amet, auctor auctor massa sit et condimentum rhoncus. Diam eu amet, egestas morbi faucibus nunc massa nunc, id.</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Ada hewan baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
    <string name="splash">SPLASH</string>
</resources>