<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.mainscreen.account.profile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                style="@style/TextView.label"
                android:textFontWeight="600"
                android:text="@string/creative"/>



        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_user_profile_upload"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_user_profile_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_name"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_profile_upload" />

        <EditText
            android:id="@+id/edt_first_name"
            style="@style/TextView.input"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toStartOf="@+id/edt_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="177dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:paddingStart="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            style="@style/TextView.input"
            android:background="@drawable/bg_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edt_first_name"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_first_name" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/TextView.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <EditText
            android:id="@+id/edt_desc"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_textarea"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/describe_who_you_are"
            android:inputType="text|textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_social_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/your_social_media"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

        <EditText
            android:id="@+id/edt_sosmed_insta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/hint_link_instagram"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_social_media"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/edt_sosmed_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/link_youtube"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_sosmed_insta"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/edt_sosmed_linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/linkedin"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            style="@style/TextView.input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_sosmed_youtube"
            tools:ignore="LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btn_save_profile"
            style="@style/TextView.buttonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_sosmed_linkedin" />

        <TextView
            android:id="@+id/btn_cancel_upload_profile"
            style="@style/TextView.buttonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>