<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.mainscreen.account.telyuaccount.TelyuAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp">

        <LinearLayout
            android:id="@+id/bg_telyu_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="275dp"
                android:layout_height="240dp"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="42dp"
                android:layout_gravity="center"
                android:src="@drawable/bg_telyu_account" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/full_name"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_telyu_account" />

        <EditText
            android:id="@+id/edt_full_name"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/nim"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_full_name" />

        <EditText
            android:id="@+id/edt_nim"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/enter_your_nim"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nim"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/faculty"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_nim" />

        <EditText
            android:id="@+id/edt_faculty"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/enter_your_faculty"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_faculty"
            tools:ignore="LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_study_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/study_program"
            style="@style/TextView.label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_faculty" />

        <EditText
            android:id="@+id/edt_study_program"
            style="@style/TextView.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:hint="@string/enter_your_study_program"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_study_program"
            tools:ignore="LabelFor,RtlSymmetry" />

        <Button
            android:id="@+id/btn_save_telyu_account"
            style="@style/TextView.buttonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_study_program" />

        <TextView
            android:id="@+id/tv_cancel_telyu_account"
            style="@style/TextView.buttonPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_telyu_account" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>